--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,185149],[],[[4,0,0,[],[1,8491,80158],[]],[5,0,0,[],[1,88651,96494],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,682287],[],[[4,0,0,[5],[0,113899,568382,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Requirement Suite","*C:\\Users\\srini.SRINIKAMALI\\PycharmProjects\\Robot Framework-Automation\\TestCases\\Requirement_Suite.robot","*../TestCases/Requirement_Suite.robot","*TC001_Add Candidate with All Details","*TC002 Add Candidate without enterd Mandatory values"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Timesheet Suite","*C:\\Users\\srini.SRINIKAMALI\\PycharmProjects\\Robot Framework-Automation\\TestCases\\Timesheet_Suite.robot","*../TestCases/Timesheet_Suite.robot","*TC003 Find The Employee Attadence Details","*smoke","*ReadTimeoutError: HTTPConnectionPool(host='localhost', port=58167): Read timed out. (read timeout=120)"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:02:57","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:03:05","fail":0,"id":"s1","label":"Requirement Suite","name":"Requirement Suite","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:09:28","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:09:28","fail":1,"label":"smoke","pass":0,"skip":0}],[{"elapsed":"00:11:22","fail":1,"id":"s1","label":"Timesheet Suite","name":"Timesheet Suite","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1754674050282;
+window.output["baseMillis"] = 1755797508994;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 187181;
+window.output["generated"] = 682685;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
